--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,19 +1,19 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]still under development[].\nYou may notice bugs and unfinished content. \n [red]While mod is not playable.[]\n Stay tuned for further updates.
-mod.ol.ok = Ok
-mod.ol.doNotShowItAgain = Do not show this window again
+mod.ol.disclaimer.text = Omaloon-mod is[red]still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is not playable.[]\nStay tuned for further updates.
+mod.ol.ok = OK
+mod.ol.doNotShowItAgain = Hide this window
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[#6dff75], yesC48.
 mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 mod.ol.subtitle1 = [#87ceeb]he he
-mod.ol.subtitle2 = [#87ceeb]I`m alive!
-mod.ol.subtitle3 = [#87ceeb]:З
+mod.ol.subtitle2 = [#87ceeb]I'm alive!
+mod.ol.subtitle3 = [#87ceeb]yesC48 was here
 mod.ol.subtitle4 = [#87ceeb]Community!
 mod.ol.omaloon-settings = Omaloon
-setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon developers! \n- Offer your ideas! \n- Chat with other «connoisseurs of beauty»! \n- Join to development of Omaloon!
+setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon dev and contributors; \n- Offer your ideas; \n- Chat with other «connoisseurs of beauty»; and \n- Contribute to the development of Omaloon!
 setting.ol.discord-join = Join to Omaloon Discord community!
 setting.mod.ol.show.name = Hide warning window[#7f7f7f](needs restart)[]
 setting.mod.ol.show.description = Removes warning window that appears after starting game.
@@ -23,29 +23,24 @@ setting.mod.ol.show.description = Removes warning window that appears after star
 planet.ol-omaloon.name = Omaloon[red][hidden][]
 planet.ol-omaloon.description = Planet in another star system. Cold star does not give enough heat, so eternal winter reigns on planet.
 planet.ol-omaloon.details = [orange]Best planet of all.
-
 planet.ol-amsha.name = Amsha[red][hidden][]
 planet.ol-amsha.description = An independent star that`s center of Amsha system.
+
 # region Items
 
 item.ol-grumon.name = Grumon
 item.ol-grumon.description = Used in defense and production.
 item.ol-grumon.details = A metal with strong magnetic abilities.
-
 item.ol-omalite.name = Omalite
 item.ol-omalite.description = Used in production, ammunition and advanced coolant.
 item.ol-omalite.details = Cold, radioactive stone. Source unknown.
-
 item.ol-omalite-alloy.name = Omalite Alloy
-item.ol-omalite-alloy.description = Widely used in buildings.
+item.ol-omalite-alloy.description = Widely used in buildings within the mod.
 item.ol-omalite-alloy.details = Cold, slightly radioactive.
-
 item.ol-magnetic-combination.name = Magnetic Combination
 item.ol-magnetic-combination.description = Used in transportation and projectors.
-
 item.ol-zarini.name = Zarini
 item.ol-zarini.description = Used in special ammunition types and in advanced unit construction.
-
 item.ol-valkon.name = Valkon
 item.ol-valkon.description = Used in building units and advanced structures.
 
@@ -53,40 +48,32 @@ item.ol-valkon.description = Used in building units and advanced structures.
 
 liquid.ol-liquid-omalite.name = Omalite Liquid
 liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
-liquid.ol-liquid-omalite.details = Icy liquid. Barely colder than cryofluid however it still can be used as coolant.
-
+liquid.ol-liquid-omalite.details = Icy liquid. Colder than cryofluid and has a very low freezing point.
 liquid.ol-dalanii.name = Dalanii
 liquid.ol-dalanii.description = Used on item production.
-liquid.ol-dalanii.details = Somewhat slimy.
+liquid.ol-dalanii.details = Suspiciously slimy.
 
 ###Blocks
 
 block.ol-gravel-dalanii.name = Gravel Dalanii
 block.ol-flor-dalanii.name = Dalanii
 block.ol-deep-dalanii.name = Deep Dalanii
-
 block.ol-omalite-alloy-wall.name = Omalite Alloy Wall
-block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. Freezes units that have laser weapons if they hit a wall. Resilient. Doesn't burn.
-
+block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells.\nFreezes units that have laser weapons if they hit a wall. Resilient. Doesn't burn.
 block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
-block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
-
+block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles.\nFreezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
 block.ol-test-joint.name = Test join block
-
+block.ol-test-joint.description = Protects structures from enemy projectiles. Visually merges with blocks of the same type.\nSandbox only.
 block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
-
 block.ol-low-temperature-smelter.name = Omalite Centrifuge
-block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Requires cooling. During the process it produces a small amount of energy.
-
+block.ol-low-temperature-smelter.description = Fuses pure omalite and titanium into omalite liquid. Requires coolant and makes a small amount of power.
 block.ol-fuser.name = Diluent
-block.ol-fuser.description = Dissolves omalite in water to obtain Omalite Liquid by slowly stirring it.
-
+block.ol-fuser.description = Crushes omalite into fine powder and mixes it with water.
 block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
-
-block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Fires powerful charged freezing projectiles that freeze and loosely home to the cursor.\nRequires power and omalite liquid.
+block.ol-blue-night.name = Freezing
+block.ol-blue-night.description = Fires powerful charged freezing ground projectiles that freeze and loosely home to the cursor.\nRequires power and omalite liquid.
 
 ###Status effects
 status.ol-slime.name = Slimed
@@ -97,7 +84,7 @@ stat.magnetic = Magnetism
 stat.average-surface-temperature = Average surface temperature
 unit.kelvins = [#bfbfbf]K[]
 stat.radius = Radius
-unit.kilometers = [#bfbfbf]km³[]
+unit.kilometers = [#bfbfbf]km[]
 stat.orbit-radius = Orbit radius
 
 ###Thanks yesC48 =)
