Update Checker test

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,10 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
 mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is not playable.[]\nStay tuned for further updates.
+mod.ol.updater.tile = New version found!
+mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the new version! \n\n[gray]The current version of Omaloon is v{0} but latest is v{1}[]
+mod.ol.updater.load = Install Now!
+mod.ol.updater.later = Remind me later
 mod.ol.ok = OK
 mod.ol.doNotShowItAgain = Do not show again
 mod.ol.name = [#87ceeb]Omaloon[]
@@ -16,7 +20,9 @@ mod.ol.omaloon-settings = Omaloon
 setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon dev and contributors; \n- Offer your ideas; \n- Chat with other «connoisseurs of beauty»; and \n- Contribute to the development of Omaloon!
 setting.ol.discord-join = Join to Omaloon Discord community!
 setting.mod.ol.show.name = Hide warning window
-setting.mod.ol.show.description = Removes warning window that appears after starting game.
+setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
+setting.mod.ol.check.name = Check for updates
+setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
 
 
 ###Planets
