looks-little-better

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,12 +1,12 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
 mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is not playable.[]\nStay tuned for further updates.
-mod.ol.updater.tile = New version found!
-mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the new version! \n\n[gray]The current version of Omaloon is v{0} but latest is v{1}[]
-mod.ol.updater.load = Install Now!
-mod.ol.updater.later = Remind me later
 mod.ol.ok = OK
 mod.ol.doNotShowItAgain = Do not show again
+mod.ol.updater.tile = New version found!
+mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the newest version! \n\n[gray]The current version of Omaloon is v{0}, but latest is v{1}[]
+mod.ol.updater.load = Install Now!
+mod.ol.updater.later = Remind me later
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
