--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,7 +12,7 @@ mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]I'm alive!
-mod.ol.subtitle3 = [#87ceeb]yesC48 was here
+mod.ol.subtitle3 = [#87ceeb]:3
 mod.ol.subtitle4 = [#87ceeb]Community!
 mod.ol.omaloon-settings = Omaloon
 setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon dev and contributors; \n- Offer your ideas; \n- Chat with other «connoisseurs of beauty»; and \n- Contribute to the development of Omaloon!
@@ -37,10 +37,10 @@ item.ol-omalite.name = Omalite
 item.ol-omalite.description = Used in production, ammunition and advanced coolant.
 item.ol-omalite.details = Cold, radioactive stone. Source unknown.
 item.ol-omalite-alloy.name = Omalite Alloy
-item.ol-omalite-alloy.description = Widely used in buildings within the mod.
+item.ol-omalite-alloy.description = Widely used in constructing units and structures.
 item.ol-omalite-alloy.details = Cold, slightly radioactive.
 item.ol-magnetic-combination.name = Magnetic Combination
-item.ol-magnetic-combination.description = Used in transportation and projectors.
+item.ol-magnetic-combination.description = Used in transportation and support projectors.
 item.ol-zarini.name = Zarini
 item.ol-zarini.description = Used in special ammunition types and in advanced unit construction.
 item.ol-valkon.name = Valkon
@@ -52,7 +52,7 @@ liquid.ol-liquid-omalite.name = Omalite Liquid
 liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
 liquid.ol-liquid-omalite.details = Icy liquid. Colder than cryofluid and has a very low freezing point.
 liquid.ol-dalanii.name = Dalanii
-liquid.ol-dalanii.description = Used on item production.
+liquid.ol-dalanii.description = Used on item production and unit construction. Inert.
 liquid.ol-dalanii.details = Suspiciously slimy.
 
 ###Blocks
@@ -63,8 +63,8 @@ block.ol-deep-dalanii.name = Deep Dalanii
 block.ol-omalite-alloy-wall.name = Omalite Alloy Wall
 block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells.\nFreezes units that have laser weapons if they hit a wall. Resilient. Doesn't burn.
 block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
-block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles.\nFreezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
-block.ol-test-joint.name = Test join block
+#block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles.\nFreezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
+#block.ol-test-joint.name = Test join block
 block.ol-test-joint.description = Protects structures from enemy projectiles. Visually merges with blocks of the same type.\nSandbox only.
 block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
@@ -86,7 +86,7 @@ stat.magnetic = Magnetism
 stat.average-surface-temperature = Average surface temperature
 unit.kelvins = [#bfbfbf]K[]
 stat.radius = Radius
-unit.kilometers = [#bfbfbf]km[]
+unit.kilometers = [#bfbfbf]km³[]
 stat.orbit-radius = Orbit radius
 
 ###Thanks yesC48 =)
