--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is not playable.[]\nStay tuned for further updates.
+mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable.[]\nStay tuned for future updates.
 mod.ol.ok = OK
 mod.ol.doNotShowItAgain = Do not show again
 mod.ol.updater.tile = New version found!
@@ -96,7 +96,10 @@ block.ol-freezing.description = Shoots charged shells of packed omalite liquid a
 status.ol-slime.name = Slimed
 ###Bars
 bar.acceleration = Acceleration
+bar.pressureEfficient = Pressure: {0} ({1}%)
+bar.pressure = Pressure:
 ###Stats
+stat.pressure = Pressure:
 stat.requirements = Crafts
 stat.damage-share = Damage share
 stat.magnetic = Magnetic susceptibility
