better-for-stats

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -99,7 +99,11 @@ bar.acceleration = Acceleration
 bar.pressureEfficient = Pressure: {0} ({1}%)
 bar.pressure = Pressure:
 ###Stats
-stat.pressure = Pressure:
+category.pressure = Pressure
+stat.pressure-consume = Pressure consumption
+stat.pressure-production = Pressure production
+stat.max-pressure = Maximum pressure
+unit.pressure = pressure units
 stat.requirements = Crafts
 stat.damage-share = Damage share
 stat.magnetic = Magnetic susceptibility
