reinforced-pressure-counter regions

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -99,6 +99,7 @@ bar.acceleration = Acceleration
 bar.pressureEfficient = Pressure: {0} ({1}%)
 bar.pressure = Pressure:
 ###Stats
+stat.pressure = Pressure:
 category.pressure = Pressure
 stat.pressure-consume = Pressure consumption
 stat.pressure-production = Pressure production
