--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -23,6 +23,8 @@ setting.mod.ol.show.name = Hide warning window
 setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
 setting.mod.ol.check.name = Check for updates
 setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
+setting.mod.ol.pressureupdate.name = Pressure update rare
+setting.mod.ol.pressureupdate.description = Used to get how many ticks renderer pressure value
 
 
 ###Planets
