--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -24,7 +24,9 @@ setting.mod.ol.show.description = If enabled, removes warning window that appear
 setting.mod.ol.check.name = Check for updates
 setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
 setting.mod.ol.pressureupdate.name = Pressure update rare
-setting.mod.ol.pressureupdate.description = Used to get how many ticks renderer pressure value
+setting.mod.ol.pressureupdate.description = Used to get how many ticks renderer pressure value.
+setting.mod.ol.pressureupdate.possible-bugs = ticks, possible bugs
+setting.mod.ol.pressureupdate.ticks = ticks
 
 
 ###Planets
@@ -106,7 +108,7 @@ category.pressure = Pressure
 stat.pressure-consume = Pressure consumption
 stat.pressure-production = Pressure production
 stat.max-pressure = Maximum pressure
-unit.pressure = pressure units
+unit.pressure = Atm
 stat.requirements = Crafts
 stat.damage-share = Damage share
 stat.magnetic = Magnetic susceptibility
