cleaning if I deleted something important please put it back

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,30 +3,39 @@ mod.ol.disclaimer.title = [accent]Caution![]
 mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable.[]\nStay tuned for future updates.
 mod.ol.ok = OK
 mod.ol.doNotShowItAgain = Do not show again
+
 mod.ol.updater.tile = New version found!
 mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the newest version! \n\n[gray]The current version of Omaloon is v{0}, but latest is v{1}[]
 mod.ol.updater.load = Install Now!
 mod.ol.updater.later = Remind me later
+
 mod.ol.name = [#87ceeb]Omaloon[]
-mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
+
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
+mod.ol.contributors = [#7f7f7f]Contributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], Zelaux.
 mod.ol.description = [#badbeb]The first mod made by xStaBUx for Mindustry. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
+
 mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]I'm alive!
-mod.ol.subtitle3 = [#87ceeb]:З
+mod.ol.subtitle3 = [#87ceeb]:3
 mod.ol.subtitle4 = [#87ceeb]Community!
+
 mod.ol.omaloon-settings = Omaloon
+
 setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon dev and contributors; \n- Offer your ideas; \n- Chat with other «connoisseurs of beauty»; and \n- Contribute to the development of Omaloon!
 setting.ol.discord-join = Join to Omaloon Discord community!
+
 setting.mod.ol.show.name = Hide warning window
 setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
+
 setting.mod.ol.check.name = Check for updates
 setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
+
 setting.mod.ol.pressureupdate.name = Pressure update rare
-setting.mod.ol.pressureupdate.description = Used to get how many ticks renderer pressure value.
-setting.mod.ol.pressureupdate.possible-bugs = ticks, possible bugs
-setting.mod.ol.pressureupdate.ticks = ticks
+setting.mod.ol.pressureupdate.description = If you notice a decrease in game performance using the pressure system, increase the value until performance improves.
+setting.mod.ol.pressureupdate.possible-bugs =  ticks, possible bugs
+setting.mod.ol.pressureupdate.ticks =  ticks
 
 
 ###Planets
@@ -36,7 +45,7 @@ planet.ol-omaloon.details = [orange]Best planet of all.
 
 planet.ol-amsha.name = Amsha[red][hidden][]
 planet.ol-amsha.description = An independent star that`s center of Amsha system.
-# region Items
+###Items
 
 item.ol-grumon.name = Grumon
 item.ol-grumon.description = Used in defense and production.
@@ -98,24 +107,28 @@ block.ol-freezing.description = Shoots charged shells of packed omalite liquid a
 
 ###Status effects
 status.ol-slime.name = Slimed
+
 ###Bars
 bar.acceleration = Acceleration
 bar.pressureEfficient = Pressure: {0} ({1}%)
 bar.pressure = Pressure:
+
 ###Stats
-stat.pressure = Pressure:
 category.pressure = Pressure
+
+stat.pressure = Pressure:
 stat.pressure-consume = Pressure consumption
 stat.pressure-production = Pressure production
 stat.max-pressure = Maximum pressure
-unit.pressure = Atm
 stat.requirements = Crafts
 stat.damage-share = Damage share
 stat.magnetic = Magnetic susceptibility
 stat.average-surface-temperature = Average surface temperature
-unit.kelvins = [#bfbfbf]K(kelvins)[]
 stat.radius = Radius
-unit.kilometers = [#bfbfbf]km³[]
 stat.orbit-radius = Orbit radius
+
+unit.pressure = Atm
+unit.kelvins = [#bfbfbf]K(kelvins)[]
+unit.kilometers = [#bfbfbf]km³[]
 
 ###Thanks yesC48 =)
