little-bundle-fix

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,7 +12,7 @@ mod.ol.updater.later = Remind me later
 mod.ol.name = [#87ceeb]Omaloon[]
 
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
-mod.ol.contributors = [#7f7f7f]Contributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], Zelaux.
+mod.ol.contributors = [#7f7f7f]Contributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[][], Zelaux.
 mod.ol.description = [#badbeb]The first mod made by xStaBUx for Mindustry. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 
