--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -33,7 +33,7 @@ setting.mod.ol.check.name = Check for updates
 setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
 
 setting.mod.ol.pressureupdate.name = Pressure update rare
-setting.mod.ol.pressureupdate.description = If you notice a decrease in game performance using the pressure system, increase the value until performance improves.
+setting.mod.ol.pressureupdate.description = If you notice a decrease in game performance using the pressure system, \nincrease the value until performance improves.
 setting.mod.ol.pressureupdate.possible-bugs =  ticks, possible bugs
 setting.mod.ol.pressureupdate.ticks =  ticks
 
@@ -117,6 +117,7 @@ bar.pressure = Pressure:
 category.pressure = Pressure
 
 stat.pressure = Pressure:
+stat.tier = Tier
 stat.pressure-consume = Pressure consumption
 stat.pressure-production = Pressure production
 stat.max-pressure = Maximum pressure
