--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,8 +1,9 @@
+###suppress inspection "UnusedProperty" for whole file
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable.[]\nStay tuned for future updates.
+mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable outside the sandbox..[]\nStay tuned for future updates.
 mod.ol.ok = OK
-mod.ol.doNotShowItAgain = Do not show again
+mod.ol.doNotShowItAgain = Don't remind again
 
 mod.ol.updater.tile = New version found!
 mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the newest version! \n\n[gray]The current version of Omaloon is v{0}, but latest is v{1}[]
@@ -13,51 +14,41 @@ mod.ol.name = [#87ceeb]Omaloon[]
 
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
 mod.ol.contributors = [#7f7f7f]Contributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[][], Zelaux.
-mod.ol.description = [#badbeb]The first mod made by xStaBUx for Mindustry. Adds mostly unique content.[]
+mod.ol.description = [#badbeb]The [][accent]Mindustry[][#badbeb] mod aims to expand the campaign by adding a new star system.\n[][red]In active development. For now, not suitable for games outside the sandbox.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 
 mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]I'm alive!
 mod.ol.subtitle3 = [#87ceeb]:3
 mod.ol.subtitle4 = [#87ceeb]Community!
+mod.ol.subtitle5 = [#87ceeb]Among the winds
 
 mod.ol.omaloon-settings = Omaloon
 
-setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon dev and contributors; \n- Offer your ideas; \n- Chat with other «connoisseurs of beauty»; and \n- Contribute to the development of Omaloon!
+setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Chat with Omaloon developers \n- Offer your ideas \n- Chat with other "connoisseurs of beauty"
 setting.ol.discord-join = Join to Omaloon Discord community!
 
-setting.mod.ol.show.name = Hide warning window
+setting.mod.ol.show.name = Hide the warning window
 setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
 
 setting.mod.ol.check.name = Check for updates
-setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check for updates when Mindustry starts \nand notify you if it found update.
+setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself for updates when Miindustry starts \nand notify you if it finds an available update.
 
 setting.mod.ol.pressureupdate.name = Pressure update rare
 setting.mod.ol.pressureupdate.description = If you notice a decrease in game performance using the pressure system, \nincrease the value until performance improves.
-setting.mod.ol.pressureupdate.possible-bugs =  ticks, possible bugs
-setting.mod.ol.pressureupdate.ticks =  ticks
+setting.mod.ol.pressureupdate.possible-bugs =  tick(s), possible bugs
+setting.mod.ol.pressureupdate.ticks =  tick(s)
 
 
 ###Planets
 planet.ol-omaloon.name = Omaloon[red][hidden][]
-planet.ol-omaloon.description = Planet in another star system. Cold star does not give enough heat, so eternal winter reigns on planet.
-planet.ol-omaloon.details = [orange]Best planet of all.
 
 planet.ol-amsha.name = Amsha[red][hidden][]
-planet.ol-amsha.description = An independent star that`s center of Amsha system.
-###Items
 
+###Items
 item.ol-grumon.name = Grumon
 item.ol-grumon.description = Used in defense and production.
 item.ol-grumon.details = A metal with strong magnetic abilities.
-
-item.ol-omalite.name = Omalite
-item.ol-omalite.description = Used in production, ammunition and advanced coolant.
-item.ol-omalite.details = Cold, radioactive stone. Source unknown.
-
-item.ol-omalite-alloy.name = Omalite Alloy
-item.ol-omalite-alloy.description = Widely used in buildings.
-item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 item.ol-magnetic-combination.name = Magnetic Combination
 item.ol-magnetic-combination.description = Used in transportation and projectors.
@@ -67,6 +58,14 @@ item.ol-zarini.description = Used in special ammunition types and in advanced un
 
 item.ol-valkon.name = Valkon
 item.ol-valkon.description = Used in building units and advanced structures.
+
+item.ol-omalite.name = Omalite
+item.ol-omalite.description = Used in production, ammunition and advanced coolant.
+item.ol-omalite.details = Cold, radioactive stone. Source unknown.
+
+item.ol-omalite-alloy.name = Omalite Alloy
+item.ol-omalite-alloy.description = Widely used in buildings.
+item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 ###Liquids
 
@@ -90,8 +89,59 @@ block.ol-omalite-alloy-wall.description = Protects buildings from enemy projecti
 block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
 block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that hit the wall with a laser weapon. Does not burn.
 
+block.ol-zarini-wall.name = Zarini modular wall
+block.ol-zarini-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
+
+block.ol-tungsten-wall.name = Tungsten modular wall
+block.ol-tungsten-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
+
+block.ol-mechanical-compressor.name = Mechanical compressor
+block.ol-mechanical-compressor.description = Creates the pressure required for some factories and turrets.
+
+block.ol-electric-compressor.name = Electric compressor
+block.ol-electric-compressor.description = Creates the pressure required for some factories and turrets.
+
+block.ol-sandbox-compressor.name = Creative compressor
+block.ol-sandbox-compressor.description = Creates the pressure required for some factories and turrets. Can be config. 0 - vacuum mode. Only a sandbox.
+
+block.ol-pressure-pipe.name = Pressure pipe
+block.ol-pressure-pipe.description = Transmits pressure.
+
+block.ol-improved-pressure-pipe.name = Improved pressure pipe
+block.ol-improved-pressure-pipe.description = Transmits pressure.
+
+block.ol-reinforced-pressure-pipe.name = Reinforced pressure pipe
+block.ol-reinforced-pressure-pipe.description = Transmits pressure.
+
+block.ol-pressure-counter.name = Counter
+block.ol-pressure-counter.description = Displays system pressure with an arrow. Transmits pressure.
+
+block.ol-improved-pressure-counter.name = Improved counter
+block.ol-improved-pressure-counter.description = Displays system pressure with an arrow. Transmits pressure.
+
+block.ol-reinforced-pressure-counter.name = Reinforced counter
+block.ol-reinforced-pressure-counter.description = Displays system pressure with an arrow. Transmits pressure.
+
+block.ol-pressure-junction.name = Pressure junction
+block.ol-pressure-junction.description = Acts as a bridge for two cross pressure pipes.
+
+block.ol-pressure-bridge.name = Pressure bridge
+block.ol-pressure-bridge.description = Transmits pressure through buildings or terrain.
+
+block.ol-improved-pressure-bridge.name = Improved pressure bridge
+block.ol-improved-pressure-bridge.description = Transmits pressure through buildings or terrain.
+
+block.ol-reinforced-pressure-bridge.name = Reinforced pressure bridge
+block.ol-reinforced-pressure-bridge.description = Transmits pressure through buildings or terrain.
+
 block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
+
+block.ol-zarini-boiler.name = Sarini boiler
+block.ol-zarini-boiler.description = Evaporates dalanii and collect the sediment on the grumon.
+
+block.ol-valcon-press.name = Valkon press
+block.ol-valcon-press.description = Compress tungsten and zarini under high pressure.
 
 block.ol-centrifuge.name = Omalite Centrifuge
 block.ol-centrifuge.description = Fuses pure omalite and titanium into omalite liquid. Requires coolant and makes a small amount of power.
@@ -121,9 +171,13 @@ stat.tier = Tier
 stat.pressure-consume = Pressure consumption
 stat.pressure-production = Pressure production
 stat.max-pressure = Maximum pressure
+
 stat.requirements = Crafts
+
 stat.damage-share = Damage share
+
 stat.magnetic = Magnetic susceptibility
+
 stat.average-surface-temperature = Average surface temperature
 stat.radius = Radius
 stat.orbit-radius = Orbit radius
