~~Omaloon-mod~~ - Omaloon

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,7 +1,7 @@
 ###suppress inspection "UnusedProperty" for whole file
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = Omaloon-mod is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable outside the sandbox..[]\nStay tuned for future updates.
+mod.ol.disclaimer.text = Omaloon is[red] still under development[].\nYou may notice bugs and unfinished content.\n[red]For now, the mod is unplayable outside the sandbox..[]\nStay tuned for future updates.
 mod.ol.ok = OK
 mod.ol.doNotShowItAgain = Don't remind again
 
