bundle-for-new-world-processor-commands

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -158,6 +158,20 @@ block.ol-freezing.description = Shoots charged shells of packed omalite liquid a
 ###Status effects
 status.ol-slime.name = Slimed
 
+###Processors
+lcategory.pressure = Pressure
+lcategory.pressure.description = Interact with the pressure systems.
+
+lst.prreload-warn = [WARNING] the statement at 0 ticks [red]can call lags.[]
+
+lst.prdelete-warn = [WARNING] the statement can [red]destroy all pressure system.[]
+
+lcategory.comments = Comments
+lcategory.comments.description = Leave comments and output information to the console.
+
+lst.logger-level = Logger level
+lst.message = message:
+
 ###Bars
 bar.acceleration = Acceleration
 bar.pressureEfficient = Pressure: {0} ({1}%)
