Sarini-boiler-lmao

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -137,7 +137,7 @@ block.ol-reinforced-pressure-bridge.description = Transmits pressure through bui
 block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
 
-block.ol-zarini-boiler.name = Sarini boiler
+block.ol-zarini-boiler.name = Zarini boiler
 block.ol-zarini-boiler.description = Evaporates dalanii and collect the sediment on the grumon.
 
 block.ol-valcon-press.name = Valkon press
