little-little-fix

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -123,7 +123,7 @@ block.ol-reinforced-pressure-counter.name = Reinforced counter
 block.ol-reinforced-pressure-counter.description = Displays system pressure with an arrow. Transmits pressure.
 
 block.ol-pressure-junction.name = Pressure junction
-block.ol-pressure-junction.description = Acts as a bridge for two cross pressure pipes.
+block.ol-pressure-junction.description = Pipe modifier. Acts as a bridge between two crossover pipes for pressure. Can only be installed on pressure pipes.
 
 block.ol-pressure-bridge.name = Pressure bridge
 block.ol-pressure-bridge.description = Transmits pressure through buildings or terrain.
