--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -155,6 +155,9 @@ block.ol-hyper-receiver.description = Collects energy from the sun. Requires oma
 block.ol-freezing.name = Freezing
 block.ol-freezing.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either run.
 
+block.ol-tau.name = Tau
+block.ol-tau.description = Fires energy volleys at enemy aircraft.
+
 ###Status effects
 status.ol-slime.name = Slimed
 
