--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -41,9 +41,9 @@ setting.mod.ol.pressureupdate.ticks =  tick(s)
 
 
 ###Planets
-planet.ol-omaloon.name = Omaloon[red][hidden][]
+planet.ol-omaloon.name = Omaloon [red][hidden][]
 
-planet.ol-amsha.name = Amsha[red][hidden][]
+planet.ol-amsha.name = Amsha [red][hidden][]
 
 ###Items
 item.ol-grumon.name = Grumon
@@ -143,11 +143,11 @@ block.ol-zarini-boiler.description = Evaporates dalanii and collect the sediment
 block.ol-valcon-press.name = Valkon press
 block.ol-valcon-press.description = Compress tungsten and zarini under high pressure.
 
-block.ol-centrifuge.name = Omalite Centrifuge
-block.ol-centrifuge.description = Fuses pure omalite and titanium into omalite liquid. Requires coolant and makes a small amount of power.
-
 block.ol-fuser.name = Diluent
-block.ol-fuser.description = Crushes omalite into fine powder and mixes it with water.
+block.ol-fuser.description = Mixes omalite with water.
+
+block.ol-centrifuge.name = Omalite Centrifuge
+block.ol-centrifuge.description = Combines omalite with titanium by splitting and pressing them in a centrifuge. When accelerating, it produces a little amount of power.
 
 block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
