totally didnt forgot to enable github runs

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -32,7 +32,7 @@ setting.mod.ol.show.name = Hide the warning window
 setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
 
 setting.mod.ol.check.name = Check for updates
-setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself for updates when Miindustry starts \nand notify you if it finds an available update.
+setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself for updates when Mindustry starts \nand notify you if it finds an available update.
 
 setting.mod.ol.pressureupdate.name = Pressure update rare
 setting.mod.ol.pressureupdate.description = If you notice a decrease in game performance using the pressure system, \nincrease the value until performance improves.
