--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ buildscript{
         kotlinVersion = "1.6.0"
 //        kotlinVersion = "1.5.31"
 
-        sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
         mindustryModule = { String name ->
             //skip to last submodule
             if(name.contains(':')) name = name.split(':').last()
@@ -58,13 +57,15 @@ plugins{
     id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
     id "org.jetbrains.kotlin.kapt" version "$kotlinVersion"
 }
+def parentBuildDir=buildDir;
+buildDir=new File(buildDir,"mainBuildDir")
 ext{
     //the build number that this mod is made for
     //version of SDK you will be using
     sdkVersion = '30'
-    sdkRoot = System.getenv("ANDROID_HOME")
+    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
     doExec = { cmd ->
-        def proc = cmd.execute(null, new File("$buildDir/libs"))
+        def proc = cmd.execute(null, new File("$parentBuildDir/libs"))
         proc.waitForProcessOutput(System.out, System.err)
     }
 }
@@ -164,8 +165,6 @@ configure(subprojects - project(":annotations")){
         }
     }
 }
-def parentBuildDir=buildDir;
-buildDir=new File(buildDir,"mainBuildDir")
 //project(":core")
 project(":core"){
     buildDir=parentBuildDir;
@@ -337,11 +336,11 @@ task deploy(type: Jar){
     dependsOn "core:jar"
     archiveFileName = "${project.archivesBaseName}.jar"
 
-    from{ [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
+    from{ [zipTree("$parentBuildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$parentBuildDir/libs/${project.archivesBaseName}Android.jar")] }
 
     doLast{
-        delete{ delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar" }
-        delete{ delete "$buildDir/libs/${project.archivesBaseName}Android.jar" }
+        delete{ delete "$parentBuildDir/libs/${project.archivesBaseName}Desktop.jar" }
+        delete{ delete "$parentBuildDir/libs/${project.archivesBaseName}Android.jar" }
     }
 }
 task resolveDependencies{
